# protogen-faabric

./: CMakeLists.txt  README.md
src/: FaabricGenerator.cc  FaabricGenerator.h  GrannyGenerator.cc  GrannyGenerator.h  main.cc
